--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,65 @@
 <html>
-    <head>
-        <title>Todo App</title>
-    </head>
-    <body>
-        <ul>
-            {% for d in data %}
-            <li>{{d.description}}</li>
-            {% endfor %}
-        </ul>
-    </body>
+
+<head>
+    <title>Todo App</title>
+    <style>
+        #error {
+            display: none;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            width: 200px;
+        }
+
+        li {
+            clear: both;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="error" class="hidden">Something went wrong!</div>
+    <form id="form" method="post" action="/todos/create">
+        <input type="text" id="description" name="description" />
+        <input type="submit" value="Create" />
+    </form>
+    <ul id="todos">
+        {% for todo in data %}
+        <li class="item" data-id="{{todo.id}}">
+            {{ todo.description }}
+        </li>
+        {% endfor %}
+    </ul>
+    <script>
+        const descInput = document.getElementById('description');
+        document.getElementById('form').onsubmit = function (e) {
+            e.preventDefault();
+            const desc = descInput.value;
+            descInput.value = '';
+            fetch('/todos/create', {
+                method: 'POST',
+                body: JSON.stringify({
+                    'description': desc,
+                }),
+                headers: {
+                    'Content-Type': 'application/json',
+                }
+            })
+                .then(response => response.json())
+                .then(jsonResponse => {
+                    console.log('response', jsonResponse);
+                    const li = document.createElement('li');
+                    document.getElementById('todos').appendChild(li);
+                    document.getElementById('error').className = 'hidden';
+                })
+                .catch(function () {
+                    document.getElementById('error').className = '';
+                })
+        }
+    </script>
+</body>
+
 </html>
