feat(delete): update template and add delete method

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,17 @@
         li {
             clear: both;
         }
+
+        li button {
+            background-color: transparent;
+            -webkit-apperance: none;
+            border: none;
+            outline: none;
+            color: red;
+            float: right;
+            cursor: pointer;
+            font-size: 20px;
+        }
     </style>
 </head>
 
@@ -32,10 +43,23 @@
             <input class="check-completed" data-id="{{todo.id}}" type="checkbox" {% if todo.completed %} checked {%
                 endif %} />
             {{ todo.description }}
+            <button class="delete" data-id="{{todo.id}}">&cross;</button>
         </li>
         {% endfor %}
     </ul>
     <script>
+        function delete_todo(e) {
+            console.log('event', e);
+            const todoId = e.target.dataset['id']
+            fetch('/todos/' + todoId, {
+                method: 'DELETE',
+            })
+            .then(function() {
+            const item = e.target.parentElement;
+            item.remove();
+          })
+        }
+
         function onClick_todo(e) {
             console.log('event', e);
             const newCompleted = e.target.checked;
@@ -50,6 +74,13 @@
                 }
             })
         }
+
+        const deleteButtons = document.querySelectorAll('.delete');
+        for (let i = 0; i < deleteButtons.length; i++) {
+            const deleteButton = deleteButtons[i];
+            deleteButton.onclick = delete_todo;
+        }
+
         const checkboxes = document.querySelectorAll('.check-completed');
         for (let i = 0; i < checkboxes.length; i++) {
             const checkbox = checkboxes[i];
