--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
             console.log('event', e);
             const newCompleted = e.target.checked;
             const todoId = e.target.dataset['id'];
-            fetch('/todos/' + todoId + '/set-completed', {
+            fetch('/todos/' + todoId, {
                 method: 'POST',
                 body: JSON.stringify({
                     'completed': newCompleted,
